--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive website desgin tutorial</title>
+    <title>Aixart</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,15 +19,13 @@
 
 <header class="header">
 
-    <a href="#" class="logo">marketo.</a>
+    <a href="#" class="logo">Aixart</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#services">services</a>
         <a href="#about">about</a>
         <a href="#portfolio">portfolio</a>
-        <a href="#pricing">pricing</a>
-        <a href="#review">review</a>
         <a href="#contact">contact</a>
     </nav>
 
@@ -42,9 +40,10 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>grow your business with us</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere atque sapiente veritatis nesciunt adipisci culpa.</p>
-        <a href="#" class="btn">try for free</a>
+        <h3>Wanna grow your business? </h3>
+        <h3 style="color: #77dd77; font-style: italic;">Give us a try.</h3>
+        <p>Help yourself and your business by using our wide range of premium services from our professional developers who are best in the business. </p>
+        <a href="#services" class="btn">try it</a>
     </div>
 
     <div class="image">
@@ -69,14 +68,14 @@
         <div class="box">
             <img src="images/s-1.png" alt="">
             <h3>web design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <p>Enhance your UI by using our premium UI tools.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
             <img src="images/s-2.png" alt="">
             <h3>seo marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <p>Get a better reach using our marketing strategy.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
@@ -90,21 +89,21 @@
         <div class="box">
             <img src="images/s-4.png" alt="">
             <h3>digital marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <p>Our professioals help people to upscale digitally. </p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
             <img src="images/s-5.png" alt="">
-            <h3>ad campaign</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <h3>Mobile App</h3>
+            <p>We help people scale up to mobile platforms by providing minimal android applications.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
             <img src="images/s-6.png" alt="">
-            <h3>content marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <h3>Service Softwares</h3>
+            <p>We customize and develop softwares according to client needs at competetive rates.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
@@ -127,21 +126,21 @@
         </div>
 
         <div class="content">
-            <h3 class="title">big projects start with big dreams</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias blanditiis, fugiat consequatur enim amet ullam facere quaerat, quos quae mollitia inventore! Hic, excepturi debitis velit maxime ut in at iusto.</p>
+            <h3 class="title">Think big grow big</h3>
+            <p>“If you think small, your world will be small. If you think big, your world will be big.” — Paulo Coelho. Well said...!</p>
             <a href="#" class="btn">learn more</a>
             <div class="icons-container">
                 <div class="icons">
                     <i class="fas fa-award"></i>
-                    <h3>14 award won</h3>
+                    <h3>14 awards won</h3>
                 </div>
                 <div class="icons">
                     <i class="fas fa-user"></i>
-                    <h3>250 satisfied clients</h3>
+                    <h3>250 satisfied clients.</h3>
                 </div>
                 <div class="icons">
                     <i class="fas fa-project-diagram"></i>
-                    <h3>200 projects completed</h3>
+                    <h3>200 projects completed.</h3>
                 </div>
             </div>
         </div>
@@ -221,7 +220,7 @@
 <!-- portfolio section ends -->
 
 <!-- pricing section starts  -->
-
+<!-- 
 <section class="pricing" id="pricing">
 
     <h1 class="heading"> our <span>pricing</span> </h1>
@@ -273,14 +272,14 @@
     </div>
 
 </section>
-
+ -->
 <!-- pricing section ends -->
 
 <!-- reivew section starts  -->
 
 <section class="review" id="review">
 
-    <h1 class="heading"> client's <span>review</span> </h1>
+    <h1 class="heading"> client <span>reviews</span> </h1>
 
     <div class="box-container">
 
@@ -288,26 +287,27 @@
             <div class="user">
                 <img src="images/pic-1.png" alt="">
                 <div class="info">
-                    <h3>john deo</h3>
+                    <h3>Aryan Pratap</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
                 <i class="fas fa-quote-right"></i>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui rerum ducimus, fuga numquam itaque modi magnam officiis obcaecati! Aliquid delectus aperiam harum voluptas animi unde sapiente quidem laudantium facere? Deserunt.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum explicabo illo libero modi quos laboriosam, totam eligendi. Adipisci, itaque.</p>
+            <p>its One of the best Service providing companies in the market.</p>
+            <p>lucky enough to have used the services thus saving my time and money.</p>
+            <p>Highly recommended. just go for it.</p>
         </div>
 
         <div class="box">
             <div class="user">
                 <img src="images/pic-2.png" alt="">
                 <div class="info">
-                    <h3>john deo</h3>
+                    <h3>David Sahu</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -318,17 +318,17 @@
                 </div>
                 <i class="fas fa-quote-right"></i>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui rerum ducimus, fuga numquam itaque modi magnam officiis obcaecati! Aliquid delectus aperiam harum voluptas animi unde sapiente quidem laudantium facere? Deserunt.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum explicabo illo libero modi quos laboriosam, totam eligendi. Adipisci, itaque.</p>
+            <p>Great Services. Helped me save a tonne of my resources.</p>
+            <p>The people there are very supportive and imaginative .</p>
+            <p>A group of very good listner and patient people.</p>
         </div>
 
         <div class="box">
             <div class="user">
                 <img src="images/pic-3.png" alt="">
                 <div class="info">
-                    <h3>john deo</h3>
+                    <h3>Durgesh kr gupta</h3>
                     <div class="stars">
-                        <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -337,8 +337,8 @@
                 </div>
                 <i class="fas fa-quote-right"></i>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui rerum ducimus, fuga numquam itaque modi magnam officiis obcaecati! Aliquid delectus aperiam harum voluptas animi unde sapiente quidem laudantium facere? Deserunt.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum explicabo illo libero modi quos laboriosam, totam eligendi. Adipisci, itaque.</p>
+            <p>Always inprovising there thoughts and ideas . It is boon and sin at same time</p>
+            <p>Overall kind of mixed experience .</p>
         </div>
 
     </div>
@@ -356,33 +356,33 @@
     <div class="icons-container">
         <div class="icons">
             <i class="fas fa-phone"></i>
-            <h3>our number</h3>
-            <p>+905370403797</p>
-            <p>+905370403797</p>
+            <h3>call us</h3>
+            <p>+91-7808300220</p>
+            <p>+91-6390587992</p>
         </div>
         <div class="icons">
             <i class="fas fa-envelope"></i>
-            <h3>our email</h3>
-            <p>serifhaniskl@gmail.com</p>
-            <p>serifhaniskl@gmail.com</p>
+            <h3>Email us</h3>
+            <p>dhruvlol12@gmail.com</p>
+            <p>aryanpratap98765@gmail.com</p>
         </div>
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
             <h3>our location</h3>
-            <p>İstanbul, Turkey 34440</p>
+            <p>Bangalore, India 562106</p>
         </div>
     </div>
 
     <div class="row">
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1629804296059!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15565.309326788081!2d77.702808!3d12.7572419!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6c2acf9da932b048!2sVBHC%20Vaibhava!5e0!3m2!1sen!2sin!4v1642596136799!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
 
         <form action="">
-            <input type="text" placeholder="name" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="number" class="box">
-            <textarea name="" placeholder="message" class="box" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
+            <input type="text" placeholder="Name" class="box">
+            <input type="email" placeholder="Email" class="box">
+            <input type="number" placeholder="Number" class="box">
+            <textarea name="" placeholder="Message" class="box" id="" cols="30" rows="10"></textarea>
+            <input type="submit" value="Send" class="btn">
         </form>
 
     </div>
@@ -398,21 +398,11 @@
     <div class="box-container">
         
         <div class="box">
-            <h3>our branches</h3>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> india </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> USA </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> france </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> japan </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> russia </a>
-        </div>
-
-        <div class="box">
             <h3>quick links</h3>
             <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> services </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> about </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> portfolio </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> pricing </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> review </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> contact </a>
         </div>
@@ -420,10 +410,12 @@
         <div class="box">
             <h3>our services</h3>
             <a href="#"> <i class="fas fa-check"></i> web design </a>
-            <a href="#"> <i class="fas fa-check"></i> digital marketing </a>
-            <a href="#"> <i class="fas fa-check"></i> email marketing </a>
-            <a href="#"> <i class="fas fa-check"></i> content marketing </a>
             <a href="#"> <i class="fas fa-check"></i> seo marketing </a>
+            <a href="#"> <i class="fas fa-check"></i> web hosting </a>
+            <a href="#"> <i class="fas fa-check"></i> digital marketing </a>
+            <a href="#"> <i class="fas fa-check"></i> mobile app </a>
+            <a href="#"> <i class="fas fa-check"></i> service softwares </a>
+
         </div>
 
         <div class="box">
@@ -437,27 +429,11 @@
 
     </div>
 
-    <div class="credit">created by <span>Goliaht</span> | all rights reserved</div>
+    <div class="credit">&copy;aixart.in | all rights reserved</div>
 
 </section>
 
 <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
