--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
     <div class="content">
         <h3>Wanna grow your business? </h3>
-        <h3 style="color: #77dd77; font-style: italic;">Give us a try.</h3>
+        <h3 style="color: orangered; font-style: italic;">Give us a try.</h3>
         <p>Help yourself and your business by using our wide range of premium services from our professional developers who are best in the business. </p>
         <a href="#services" class="btn">try it</a>
     </div>
 
     <div class="image">
-        <img src="images/rocket.svg" alt="">
+        <img src="images/cover-image1.svg" alt="">
     </div>
 
     <div class="cloud cloud-1"></div>
@@ -66,42 +66,42 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/s-1.png" alt="">
+            <img src="images/s6.png" alt="">
             <h3>web design</h3>
             <p>Enhance your UI by using our premium UI tools.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-2.png" alt="">
+            <img src="images/s2.png" alt="">
             <h3>seo marketing</h3>
             <p>Get a better reach using our marketing strategy.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-3.png" alt="">
+            <img src="images/s3.png" alt="">
             <h3>web hosting</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-4.png" alt="">
+            <img src="images/s4.png" alt="">
             <h3>digital marketing</h3>
             <p>Our professioals help people to upscale digitally. </p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-5.png" alt="">
+            <img src="images/s5.png" alt="">
             <h3>Mobile App</h3>
             <p>We help people scale up to mobile platforms by providing minimal android applications.</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-6.png" alt="">
+            <img src="images/s1.png" alt="">
             <h3>Service Softwares</h3>
             <p>We customize and develop softwares according to client needs at competetive rates.</p>
             <a href="#" class="btn">learn more</a>
@@ -285,7 +285,7 @@
 
         <div class="box">
             <div class="user">
-                <img src="images/pic-1.png" alt="">
+                <img src="images/pic-1.jpeg" alt="">
                 <div class="info">
                     <h3>Aryan Pratap</h3>
                     <div class="stars">
@@ -305,7 +305,7 @@
 
         <div class="box">
             <div class="user">
-                <img src="images/pic-2.png" alt="">
+                <img src="images/pic-2.jpeg" alt="">
                 <div class="info">
                     <h3>David Sahu</h3>
                     <div class="stars">
@@ -325,7 +325,7 @@
 
         <div class="box">
             <div class="user">
-                <img src="images/pic-3.png" alt="">
+                <img src="images/pic-3.jpeg" alt="">
                 <div class="info">
                     <h3>Durgesh kr gupta</h3>
                     <div class="stars">
