--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo">Aixart</a>
+   <a href="#" class="logo" style="color: #1f1ab8;">Aixart</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
