--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-   <a href="#" class="logo" style="color: #1f1ab8;">Aixart</a>
+    <a href="#" class="logo" style="color: #1f1ab8;">Aixart</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -41,7 +41,7 @@
 
     <div class="content">
         <h3>Wanna grow your business? </h3>
-        <h3 style="color: orangered; font-style: italic;">Give us a try.</h3>
+        <!-- <h3 style="color: orangered; font-style: italic;">Give us a try.</h3> -->
         <p>Help yourself and your business by using our wide range of premium services from our professional developers who are best in the business. </p>
         <a href="#services" class="btn">try it</a>
     </div>
@@ -69,42 +69,42 @@
             <img src="images/s6.png" alt="">
             <h3>web design</h3>
             <p>Enhance your UI by using our premium UI tools.</p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
         <div class="box">
             <img src="images/s2.png" alt="">
             <h3>seo marketing</h3>
             <p>Get a better reach using our marketing strategy.</p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
         <div class="box">
             <img src="images/s3.png" alt="">
             <h3>web hosting</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
         <div class="box">
             <img src="images/s4.png" alt="">
             <h3>digital marketing</h3>
             <p>Our professioals help people to upscale digitally. </p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
         <div class="box">
             <img src="images/s5.png" alt="">
             <h3>Mobile App</h3>
             <p>We help people scale up to mobile platforms by providing minimal android applications.</p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
         <div class="box">
             <img src="images/s1.png" alt="">
             <h3>Service Softwares</h3>
             <p>We customize and develop softwares according to client needs at competetive rates.</p>
-            <a href="#" class="btn">learn more</a>
+            <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
     </div>
