--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="box">
             <img src="images/s3.png" alt="">
             <h3>web hosting</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
+            <p>Helping you host your powerful applications run on our servers and be accessible 99.99% of the time globally.</p>
             <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
