--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
         <div class="box">
             <img src="images/s3.png" alt="">
             <h3>web hosting</h3>
-<<<<<<< HEAD
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
-=======
             <p>Helping you host your powerful applications run on our servers and be accessible 99.99% of the time globally.</p>
->>>>>>> 7a71f7d3c23e8d3353cbd0a4a17800f1851ad3bb
             <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
@@ -401,7 +397,7 @@
 
     <div class="row">
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15565.309326788081!2d77.702808!3d12.7572419!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6c2acf9da932b048!2sVBHC%20Vaibhava!5e0!3m2!1sen!2sin!4v1642596136799!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15565.309326788081!2d77.702808!3d12.7572419!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6c2acf9da932b048!2sVBHC%20Vaibhava!5e0!3m2!1sen!2sin!4v1642596136799!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
 
         <form action="">
             <input type="text" placeholder="Name" id="sendername" class="box">
