--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aixart</title>
-    <link rel="icon" type="image/x-icon" src="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" >
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -104,11 +104,11 @@
         <div class="box">
             <img src="images/s3.png" alt="">
             <h3>web hosting</h3>
-<<<<<<< HEAD
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, animi?</p>
-=======
+
             <p>Helping you host your powerful applications run on our servers and be accessible 99.99% of the time globally.</p>
->>>>>>> 7a71f7d3c23e8d3353cbd0a4a17800f1851ad3bb
+
             <!-- <a href="#" class="btn">learn more</a> -->
         </div>
 
