--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aixart</title>
-    <!-- <link rel="icon" type="image/x-icon" src="images/favicon.png"> -->
+    <link rel="icon" type="image/x-icon" src="images/favicon.png">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -183,10 +183,11 @@
 
         <div class="box">
             <span>01</span>
-            <img src="images/port-img1.jpg" alt="">
+            <img src="images/port-img11.png" href="http://legalexpresso.com" alt="">
             <div class="content">
-                <h3>web design</h3>
-                <p>1st may, 2021</p>
+                <h3>Blogging Website</h3>
+                <p>22nd January, 2022</p>
+                <a href="http://legalexpresso.com">View</a>
             </div>
         </div>
 
